--- a/vue3_trip/src/assets/css/common.css
+++ b/vue3_trip/src/assets/css/common.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #ff9854;
   --line-color: #faf8f9;
+  --theme-linear-gradient: linear-gradient(90deg, #fa8c1d, #fcaf3f);
 
   /*全局修改  */
   /* --van-tabbar-item-icon-size: 30px !important; */
