--- a/vue3_trip/src/assets/css/common.css
+++ b/vue3_trip/src/assets/css/common.css
@@ -31,5 +31,5 @@ body {
   display: inline-block;
   width: 12px;
   height: 12px;
-  background: url(../images/detail/icon_check.png) 0 0 / 100% 100%;
+  background: url(../img/detail/icon_check.png) 0 0 / 100% 100%;
 }
